2001-06-19  Ezra Peisach  <epeisach@mit.edu>

	* telnet.c (telrcv): Ensure variable set before use.

2001-06-18  Ezra Peisach  <epeisach@mit.edu>

	* commands.c: Cast argument to isspace() to int.

	* telnet.c (mklist): Cast argument to islower()/toupper() to int.

2001-06-08  Ezra Peisach  <epeisach@mit.edu>

	* main.c: Include unistd.h (if present) for getopt() prototype.

2001-06-07  Ezra Peisach  <epeisach@mit.edu>

	* authenc.c (telnet_gets): Cleanup assignment in conditional.

	* commands.c: Include sys/wait.h, libtelent/auth.h,
	libtelnet/encrypt.h for prototypes. Explicity declare functions as
	returning int. Assignments in conditionals cleanup.

	* externs.h: Add numerous prototypes.

	* ring.c (ring_init): Explicitly declare as returning int.

	* ring.h: Add prototype for ring_at_mark().

	* telnet.c: Include unistd.h, libtelnet/auth.h,
	libtelnet/encrypt.h for prototypes. Delcare is_unique()
	static. Fix up format string for sprintf() to expect
	longs. Assignments in conditionals cleaned up.

	* main.c, terminal.c: Include libtelnet/encrypt.h for prototype. 

	* utilities.c: Include sys/socket.h, libtelent/auth.h,
	libtelnet/encrypt.h for prototypes.

2001-05-01  Ken Raeburn  <raeburn@mit.edu>

	* telnet.c (telnet): Fix grammar in some error messages.  Based on
	a patch from Garry Zacheiss.

2000-12-06  Ken Raeburn  <raeburn@mit.edu>

	* commands.c (tn): Local var "user" should be volatile.
	* main.c (main): Local var "argp" should be volatile.

2000-11-01  Ezra Peisach  <epeisach@mit.edu>

	* configure.in: Use AC_CHECK_HEADER and AC_FUNC_VFORK instead of
	AC_HEADER_CHECK and AC_VFORK.

2000-05-11  Nalin Dahyabhai  <nalin@redhat.com>

	* commands.c (makeargv): Don't overflow buffer "saveline".
	(tn): Don't overflow buffer "_hostname".
	(cmdrc): Don't overflow buffer "m1save".
	* externs.h: Include the size of "tline", so that we can check for
	overflows elsewhere.
	* main.c(main, tn370): Don't overflow buffer "tline".